-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Linux 64 bits.
-
e1d3687d64a19d27448b3f8247505daa99261ea1
Qt5 brings Json classes that are pretty powerful. As any new feature, it may have some bugs lurking in corner cases.
One of this, is when a Json document is created with somewhat big arrays of elements (e.g 2500 elements, each one looks like:
{
"name": "John",
"surname": "Doe 4"
}
Attached an example to reproduce this bug (plus the generated backtrace). Since it depends on the number of elements (and the number of attributes), I wouldn't be surprised if it is related with a stack issue (is QJson using recursive methods?).
- resulted in
-
QTBUG-58652 Allow large files in QJson parser
-
- Closed
-
For Gerrit Dashboard: QTBUG-29288 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
48015,5 | Fix crashes when creating large documents | stable | qt/qtbase | Status: MERGED | +2 | 0 |